[gd_scene load_steps=16 format=2]

[ext_resource path="res://resources/environments/pillars.tres" type="Environment" id=1]
[ext_resource path="res://resources/track_data/pillars.tres" type="Resource" id=2]
[ext_resource path="res://scripts/world/editor_only.gd" type="Script" id=3]
[ext_resource path="res://scripts/world/main_light.gd" type="Script" id=4]
[ext_resource path="res://scripts/managers/gameplay_manager.gd" type="Script" id=5]
[ext_resource path="res://scenes/world/gameplay_zones/respawn.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/world/gameplay_zones/start_spawns.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/pooling/pools.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/world/gameplay_zones/target_start_spawn.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/world/maps/iceland.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/world/waypoint_area.gd" type="Script" id=13]
[ext_resource path="res://scripts/world/track.gd" type="Script" id=15]

[sub_resource type="BoxShape" id=6]
extents = Vector3( 21.0438, 18.2348, 34.6246 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 42.088, 36.47, 69.25 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
albedo_color = Color( 1, 1, 0, 0.54902 )

[node name="RootSpatial" type="Spatial"]
physics_interpolation_mode = 2
script = ExtResource( 15 )
data = ExtResource( 2 )

[node name="Map" parent="." instance=ExtResource( 12 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.816013, 0.207737, 0.539415, -0.555306, 0.0226287, 0.831338, 0.160493, -0.977923, 0.133823, -275.216, 151.616, -538.831 )
light_color = Color( 0.87451, 0.972549, 1, 1 )
light_energy = 0.45
shadow_enabled = true
directional_shadow_mode = 2
directional_shadow_fade_start = 0.9
directional_shadow_bias_split_scale = 1.0
directional_shadow_depth_range = 1
directional_shadow_max_distance = 324.0
script = ExtResource( 4 )

[node name="GameplayManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="GameplayManager"]
process_mode = 0
wait_time = 100.0
one_shot = true

[node name="NonPlayerPath" type="Spatial" parent="GameplayManager"]

[node name="Waypoint0" type="Position3D" parent="GameplayManager/NonPlayerPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -408.584, 6.01882, -426.458 )

[node name="Area" type="Area" parent="GameplayManager/NonPlayerPath/Waypoint0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.8804, 15.0437, 0 )
collision_layer = 0
collision_mask = 9
monitorable = false
script = ExtResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="GameplayManager/NonPlayerPath/Waypoint0/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="GameplayManager/NonPlayerPath/Waypoint0/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )
script = ExtResource( 3 )

[node name="RespawnPoints" type="Spatial" parent="GameplayManager/NonPlayerPath/Waypoint0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="RespawnPoint0" parent="GameplayManager/NonPlayerPath/Waypoint0/RespawnPoints" instance=ExtResource( 6 )]
transform = Transform( 0.930412, 0, -0.366518, 0, 1, 0, 0.366518, 0, 0.930412, 5.99594, -1.45111, -29.7607 )

[node name="Waypoint1" type="Position3D" parent="GameplayManager/NonPlayerPath"]
transform = Transform( -0.037603, 0, 0.999293, 0, 1, 0, -0.999293, 0, -0.037603, -435.825, 5.09709, -368.606 )

[node name="Area" type="Area" parent="GameplayManager/NonPlayerPath/Waypoint1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.8804, 15.0437, 0 )
collision_layer = 0
collision_mask = 9
monitorable = false
script = ExtResource( 13 )

[node name="CollisionShape" type="CollisionShape" parent="GameplayManager/NonPlayerPath/Waypoint1/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 6 )

[node name="MeshInstance" type="MeshInstance" parent="GameplayManager/NonPlayerPath/Waypoint1/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )
script = ExtResource( 3 )

[node name="RespawnPoints" type="Spatial" parent="GameplayManager/NonPlayerPath/Waypoint1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="RespawnPoint0" parent="GameplayManager/NonPlayerPath/Waypoint1/RespawnPoints" instance=ExtResource( 6 )]
transform = Transform( 0.490509, 0, -0.871438, 0, 1, 0, 0.871438, 0, 0.490509, 17.0077, 0.56282, -18.2182 )

[node name="Pools" parent="." instance=ExtResource( 10 )]

[node name="StartSpawns" parent="." instance=ExtResource( 7 )]
transform = Transform( -0.815956, 0, -0.578114, 0, 1, 0, 0.578114, 0, -0.815956, -312.063, 4.48764, -328.389 )

[node name="TargetStartSpawn" parent="." instance=ExtResource( 11 )]
transform = Transform( -0.289182, 0, -0.957275, 0, 1, 0, 0.957275, 0, -0.289182, -382.223, 4.47464, -422.034 )

[connection signal="timeout" from="GameplayManager/Timer" to="GameplayManager" method="_on_Timer_timeout"]
[connection signal="body_entered" from="GameplayManager/NonPlayerPath/Waypoint0/Area" to="GameplayManager/NonPlayerPath/Waypoint0/Area" method="_on_Area_body_entered"]
[connection signal="body_entered" from="GameplayManager/NonPlayerPath/Waypoint1/Area" to="GameplayManager/NonPlayerPath/Waypoint1/Area" method="_on_Area_body_entered"]
